@@ -42,6 +42,7 @@ filenames = README.md
 ; code generators and such don't go to CPAN
 filenames = apigen.pl
 filenames = cleangen.pl
+filenames = tmpl
 
 [TemplateFiles]
 filename = README
